# Maintenance-Tool

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: candidate-build.yml  ci.yml  release.yml
launcher/: MaintenanceTool.ps1  mtool.cmd  mytool.cmd  mytool.ps1
packaging/: build-release.ps1  sign-release.ps1
packaging/config_templates/: denyRules.json  discover.config.json  fixedTargets.json  learning.config.json
packaging/installer/: MaintenanceTool.iss  MyTool.iss
packaging/pyinstaller/: MaintenanceTool.spec  MyTool.spec
scripts/ci/: cleanup_test_artifacts.py  collect_test_artifacts.py  validate_workflows.py  workflow_policy.py
scripts/packaging/: __init__.py  export_branding.py  generate_winget_manifest.py
src/maintenancetool/: branding.py  main.py  release.py  runtime_main.py
tests/: conftest.py
tests/cli/: test_analyze_cli.py  test_clean_cli.py  test_feedback_cli.py  test_menu_cli.py  test_review_pending.py  test_runtime_cli_permissions.py  test_verify_sandbox_cli.py
tests/core/: test_analyze_initial_discovery.py  test_config_audit.py  test_config_loader.py  test_confirm.py  test_diff.py  test_discovery_roots.py  test_hit_rules.py  test_path_adapter.py  test_runtime_paths.py  test_safety.py  test_sandbox.py  test_update.py
tests/helpers/: __init__.py  cli.py  configuration.py  runtime_workspace.py  sandbox_factory.py
tests/integration/: test_launcher.py  test_runtime_app.py
tests/matrix/: test_workflow_guidance_matrix.py
tests/release/: test_artifacts.py  test_ci_scripts.py  test_config_templates.py  (+4 more)
(+43 files in other folders)
