[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytool"
version = "0.1.1"
description = "Lightweight, reviewable local cleanup tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "prompt_toolkit>=3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
mytool = "maintenancetool.main:run"
mytool-runtime = "maintenancetool.runtime_main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "core: core logic and model validation tests",
  "cli: command-line entrypoint and interaction tests",
  "matrix: cartesian-product and decision-matrix tests",
  "integration: cross-module user workflow tests",
  "release: CI/CD, artifact, packaging, and release boundary tests"
]
